# stream_mapper-core

./: .gitignore  .pre-commit-config.yaml  README.rst  getting_GD1.ipynb  getting_GD1_withflows.ipynb  pyproject.toml  setup.py  tox.ini
libs/core/: pyproject.toml
libs/core/src/stream_ml/core/: __init__.py  _typing.py  api.py  base.py  bases.py  core.py  data.py  independent.py  mixture.py  setup_package.py  typing.py
libs/core/src/stream_ml/core/background/: __init__.py  base.py
libs/core/src/stream_ml/core/params/: __init__.py  bounds.py  core.py  names.py
libs/core/src/stream_ml/core/prior/: base.py  bounds.py  core.py
libs/core/src/stream_ml/core/stream/: __init__.py  base.py
libs/core/src/stream_ml/core/utils/: __init__.py  frozen_dict.py  frozendict.py  funcs.py  hashdict.py  misc.py  params.py  pbar.py  sentinel.py
libs/core/src/stream_ml/core/utils/params/: __init__.py  bounds.py  core.py  names.py
libs/jax/: pyproject.toml
libs/jax/src/stream_ml/jax/: __init__.py  _typing.py  api.py  base.py  core.py  data.py  mixture.py
libs/jax/src/stream_ml/jax/background/: __init__.py  base.py  uniform.py
libs/jax/src/stream_ml/jax/prior/: bounds.py
libs/jax/src/stream_ml/jax/stream/: __init__.py  base.py  normal.py
libs/jax/src/stream_ml/jax/utils/: __init__.py  misc.py  sigmoid.py  tanh.py
libs/pytorch/: pyproject.toml
libs/pytorch/src/stream_ml/pytorch/: __init__.py  _typing.py  api.py  base.py  bases.py  core.py  data.py  independent.py  mixture.py  typing.py
libs/pytorch/src/stream_ml/pytorch/background/: __init__.py  base.py  builtin.py  exponential.py  sloped.py  uniform.py
libs/pytorch/src/stream_ml/pytorch/prior/: bounds.py  track.py  weight.py
libs/pytorch/src/stream_ml/pytorch/stream/: __init__.py  base.py  multinormal.py  normal.py  position.py  twonormal.py
libs/pytorch/src/stream_ml/pytorch/utils/: funcs.py  misc.py  sigmoid.py
src/stream_mapper/core/: __init__.py  _api.py  _data.py  setup_package.py
src/stream_mapper/core/_connect/: __init__.py  compat.py  data.py  nn_namespace.py  scaler.py  xp_namespace.py
src/stream_mapper/core/_core/: base.py  field.py  likelihood_api.py  model_api.py
src/stream_mapper/core/_multi/: bases.py  independent.py  mixture.py
src/stream_mapper/core/builtin/: __init__.py  _exponential.py  _norm.py  _skewnorm.py  _truncnorm.py  _truncskewnorm.py  _uniform.py
src/stream_mapper/core/builtin/_isochrone/: __init__.py  mf.py  utils.py
src/stream_mapper/core/builtin/_stats/: exponential.py  norm.py  skewnorm.py  trunc_norm.py  trunc_skewnorm.py  uniform.py
src/stream_mapper/core/params/: __init__.py  _collection.py  _core.py  _field.py  _values.py
src/stream_mapper/core/params/bounds/: __init__.py  _base.py  _builtin.py
src/stream_mapper/core/params/scaler/: __init__.py  _api.py  _builtin.py  _utils.py
src/stream_mapper/core/prior/: __init__.py  _base.py  _core.py  _track.py  _weight.py
src/stream_mapper/core/typing/: __init__.py  _array.py  _nn.py  _xp.py
src/stream_mapper/core/utils/: __init__.py  cached_property.py  compat.py  dataclasses.py  frozen_dict.py  funcs.py
src/stream_mapper/core/utils/scale/: __init__.py  _api.py  _multi.py  _standard.py  _utils.py
src/stream_ml/: __init__.py  _typing.py  base.py  core.py  funcs.py
src/stream_ml/background/: base.py  builtin.py
src/stream_ml/core/: __init__.py  _api.py  _base.py  _data.py  api.py  base.py  bases.py  data.py  independent.py  mixture.py  setup_package.py  typing.py
src/stream_ml/core/_connect/: __init__.py  compat.py  data.py  nn_namespace.py  scaler.py  xp_namespace.py
src/stream_ml/core/_core/: __init__.py  api.py  base.py  field.py  likelihood_api.py  model_api.py
src/stream_ml/core/_multi/: __init__.py  bases.py  independent.py  mixture.py
src/stream_ml/core/background/: __init__.py  uniform.py
src/stream_ml/core/builtin/: __init__.py  _exponential.py  _norm.py  _skewnorm.py  _truncnorm.py  _truncskewnorm.py  _uniform.py  _utils.py  uniform.py
src/stream_ml/core/builtin/_isochrone/: __init__.py  mf.py  utils.py
src/stream_ml/core/builtin/_stats/: exponential.py  norm.py  skewnorm.py  trunc_norm.py  trunc_skewnorm.py  uniform.py
src/stream_ml/core/multi/: __init__.py  _bases.py  _independent.py  _mixture.py  bases.py  independent.py  mixture.py
src/stream_ml/core/params/: __init__.py  _base.py  _collection.py  _core.py  _field.py  _values.py  base.py  bounds.py  core.py  names.py
src/stream_ml/core/params/bounds/: __init__.py  _base.py  _builtin.py  _core.py  _field.py
src/stream_ml/core/params/names/: __init__.py  _core.py  _field.py
src/stream_ml/core/params/scaler/: __init__.py  _api.py  _builtin.py  _utils.py
src/stream_ml/core/params/scales/: __init__.py  _core.py  _field.py  _utils.py  builtin.py  core.py  field.py
src/stream_ml/core/prior/: __init__.py  _base.py  _core.py  _track.py  _weight.py  base.py  bounds.py  core.py  weight.py
src/stream_ml/core/typing/: __init__.py  _array.py  _nn.py  _xp.py  array.py  nn.py
src/stream_ml/core/utils/: __init__.py  cached_property.py  compat.py  dataclasses.py  frozen_dict.py  funcs.py  sentinel.py
src/stream_ml/core/utils/scale/: __init__.py  _api.py  _multi.py  _standard.py  _utils.py  base.py  standard.py  utils.py
src/stream_ml/nn/: __init__.py  core.py
src/stream_ml/stream/: __init__.py  base.py  builtin.py  position.py
src/stream_ml/utils/: __init__.py  misc.py  pbar.py  sigmoid.py
tests/: test_typing.py
