[project]
  name = "stream_ml.core"
  version = "0.1.0"
  description = "Stream ML."
  readme = "README.rst"
  requires-python = ">=3.8"
  license = {file = "LICENSE"}
  keywords = ["numpy", "interoperability"]
  authors = [
    {name = "Nathaniel Starkman", email = "n.starkman@mail.utoronto.ca"},
    {name = "Jacob Nibauer", email = "jnibauer@princetoon.edu"}
  ]
  maintainers = [
    {name = "Nathaniel Starkman", email = "n.starkman@mail.utoronto.ca"},
    {name = "Jacob Nibauer", email = "jnibauer@princetoon.edu"}
  ]
  classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
  ]
  dependencies = [
    "mypy_extensions>=0.4.3",
    "numpy>=1.21",
  ]

[project.optional-dependencies]
  all = [
    "tqdm",
  ]
  test = [
    "coverage[toml]",
    "pytest",
    "pytest-astropy",
  ]
  docs = [
    "graphviz",
    "IPython",
    "jupyter_client",
    "nbsphinx",
    "pydata-sphinx-theme",
    "sphinx",
    "sphinx-astropy",
    "sphinxcontrib.bibtex < 3.0.0",
    "tomlkit",
  ]

[project.urls]
  homepage = "https://github.com/nstarman/stream_ml-core"
  repository = "https://github.com/nstarman/stream_ml-core"
  documentation = "https://github.com/nstarman/stream_ml-core"


[build-system]
  requires = [
    "mypy>=1.0",
    "mypy_extensions>=0.4.3",
    "numpy>=1.21",
    "setuptools>=45.0",
    "setuptools_scm[toml]>=6.3.1",
    "wheel",
  ]

  build-backend = 'setuptools.build_meta'


[tool.setuptools]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]


[tool.coverage.run]
  omit = [
    "tests/*",
    "*setup_package*",
  ]

[tool.coverage.report]
  exclude_lines = [
    # Have to re-enable the standard pragma
    # and branches that don't pertain to this version of Python
    "pragma: no cover",
    "pragma: py{ignore_python_version}",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run
    "if __name__ == .__main__.:",
    # Don't complain about abstract methods, they aren't run:
    '@(abc\.)?abstractmethod',
    # Exclude type check blocks and Protocol contents, they aren't run:
    "if TYPE_CHECKING:",
    '\.\.\.',
    # Don't complain about IPython completion helper
    "def _ipython_key_completions_",
  ]


[tool.mypy]
  python_version = "3.10"

  namespace_packages = true
  explicit_package_bases = true
  mypy_path = "$MYPY_CONFIG_FILE_DIR/src"

  strict = true
  disallow_subclassing_any = false
  disallow_untyped_defs = true
  no_implicit_optional = true
  warn_return_any = true
  warn_redundant_casts = true
  warn_unused_configs = true
  warn_unreachable = true
  exclude = '''(^|/)docs/|(^|/)tests/'''
  plugins = ["numpy.typing.mypy_plugin",]

  [[tool.mypy.overrides]]
    module = [
      "*/tests/*",
      "tests/*"
    ]
    ignore_errors = true

  [[tool.mypy.overrides]]
    module = [
      "astropy.*",
    ]
    ignore_errors = true
    ignore_missing_imports = true


[tool.ruff]
target-version = "py310"
line-length = 88
select = ["ALL"]
ignore = [
  # flake8-annotations (ANN)
  "ANN101",  # missing-type-self
  "ANN102",  # missing-type-cls
  "ANN401",  # dynamically-typed-expression

  # flake8-unused-arguments (ARG)
  "ARG001",  # unused-function-argument
  "ARG002",  # unused-method-argument

  # pydocstyle (D)
  "D105",  # magic-method  # don't need docstrings for magic methods
  "D107",  # public-init   # docstring is on the class
  "D203",  # one-blank-line-before-class  # contra numpydoc
  "D213",  # multi-line-summary-second-line
  "D401",  # non-imperative-mood

  # eradicate (ERA)
  "ERA001",  # commented-out-code

  # flake8-boolean-trap (FBT)
  "FBT003",

  # pandas-vet (PD)
  "PD",

  # flake8-return (RET)
  "RET505", "RET506", "RET507",

  # Ruff
  "RUF009",  # Do not perform function call in dataclass defaults

  # flake8-self (SLF)
  "SLF001",

  # flake8-todos (TD)
  "TD",

  # flake8-commas (COM)
  "COM812",  # TrailingCommaMissing
  "COM818",  # TrailingCommaOnBareTupleProhibited
  "COM819",  # TrailingCommaProhibited
]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["ANN", "S101"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.isort]
force-sort-within-sections = true
known-first-party = ["stream_ml"]
known-third-party = ["numpy", "pytest"]

[tool.ruff.pylint]
max-args = 6
