[project]
  name = "stream_ml.jax"
  version = "0.1.0"
  description = "Array API dispatcher."
  readme = "README.rst"
  requires-python = ">=3.8"
  license = {file = "LICENSE"}
  keywords = ["numpy", "interoperability"]
  authors = [
    {name = "Nathaniel Starkman", email = "n.starkman@mail.utoronto.ca"},
    {name = "Jacob Nibauer", email = "jnibauer@princetoon.edu"}
  ]
  maintainers = [
    {name = "Nathaniel Starkman", email = "n.starkman@mail.utoronto.ca"},
    {name = "Jacob Nibauer", email = "jnibauer@princetoon.edu"}
  ]
  classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
  ]
  dependencies = [
    "stream_ml.core",
    "jaxlib",
    "jax",
    "flax",
  ]

[project.optional-dependencies]
  all = [
    "tqdm",
  ]
  test = [
    "coverage[toml]",
    "numpy>=1.18",
    "pytest",
    "pytest-astropy",
  ]
  docs = [
    "graphviz",
    "IPython",
    "jupyter_client",
    "nbsphinx",
    "pydata-sphinx-theme",
    "sphinx",
    "sphinx-astropy",
    "sphinxcontrib.bibtex < 2.0.0",
    "tomlkit",
  ]

[project.urls]
  homepage = "https://github.com/nstarman/stream_ml"
  repository = "https://github.com/nstarman/stream_ml"
  documentation = "https://github.com/nstarman/stream_ml"


[build-system]
  requires = [
    "mypy>=0.991",
    "setuptools>=45.0",
    "setuptools_scm[toml]>=6.3.1",
    "wheel",
  ]

  build-backend = 'setuptools.build_meta'


[tool.setuptools]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
